# flask-vuejs

./: .gitignore  LICENSE  README.md  makefile  pyproject.toml  requirements.txt
.github/workflows/: flaskvue.yml
flask_vuejs/: __init__.py  commands.py  environs.py
flask_vuejs/bootstrap/: package.json
flask_vuejs/bootstrap/frontend/: index.js  store.js
flask_vuejs/frontend/components/: HelloWorld.vue
flask_vuejs/init/: .env  package.json  webpack.config.js
flask_vuejs/static/: main.js
flask_vuejs/static/core/: config.js
flask_vuejs/templates/vue/: base.html
sample_app/: __init__.py  package-lock.json  package.json
sample_app/frontend/components/: HelloWorld.vue
sample_app/static/components/: form.js
sample_app/static/js/: main.js
sample_app/templates/: form.html
tests/: conftest.py  test_flask_vuejs.py  test_version.py
