[tool.poetry]
name = "flask-vuejs"
version = "2.0.0"
description = "Connect Flask With VueJS Framework"
authors = ["Marcus Pereira <oi@pacotei.xyz>"]

readme = "README.md"
license = "MIT"
keywords = ["fkask + vuejs", "flask-vue", "vuejs", "create app with flask and vue"]

repository = "https://github.com/pacotei/flask-vuejs"
homepage = "https://flaskvue.pacotei.xyz/"


[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-selenium = "^1.17.0"
black = "^19.10b0"
selenium = "^3.141.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
