[tool.poetry]
name = "flask-vuejs"
version = "1.2.0"
description = "Connect Flask With VueJS Framework"
authors = ["Marcus Pereira <oi@pacotei.xyz>"]

readme = "README.md"
license = "MIT"
keywords = ["fkask + vuejs", "flask-vue", "vuejs", "create app with flask and vue"]

repository = "https://github.com/pacotei/flask-vuejs"
homepage = "https://flaskvue.netlify.app/"


[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.1.1"
colorama = "^0.4.3"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
pytest-selenium = "^2.0.0"
black = "^20.8b1"
selenium = "^3.141.0"
python-dotenv = "^0.14.0"
pytest-flask = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
